# dolphin-artifact

./: README.md
1-dolphin/: .dockerignore  .gitignore  .pre-commit-config.yaml  pyproject.toml
1-dolphin/config/feature/: 1_feature_localization_deepseekv4pro.yaml  1_feature_localization_glm51.yaml  1_feature_localization_gpt55.yaml  1_feature_localization_minimaxm3.yaml  2_feature_inference_deepseekv4pro.yaml  2_feature_inference_glm51.yaml  2_feature_inference_gpt55.yaml  2_feature_inference_minimaxm3.yaml
1-dolphin/evaluation/feature/: 0_run_online_feature_localization.py  1_run_offline_source_preprocessing.py  2_run_offline_binary_preprocessing.py  3_run_online_feature_recovery.py  4_evaluate_feature_recovery.py  5_gt_localization_to_feature_definitions.py
1-dolphin/sweagent/: __init__.py  exceptions.py  types.py
1-dolphin/sweagent/agent/: agent_alice.py  agent_binary.py  agent_race.py  agents.py  config.py  model_config.py  models.py  simplellm.py  types.py
1-dolphin/sweagent/agent/hooks/: abstract.py
1-dolphin/sweagent/codequery/tools/: __init__.py  base.py  context_tools.py  edit_tools.py
1-dolphin/sweagent/codequery/tools/feature/: feature_common_tools.py  feature_inference_tools.py  feature_localization_tools.py
1-dolphin/sweagent/codequery/tools/internal/: feature_sandbox_state.py  flake8_utils.py  search_replace.py
1-dolphin/sweagent/config/: env.py  schema.py  test_schema.py
1-dolphin/sweagent/environment/: repo.py  swe_env.py
1-dolphin/sweagent/run/: __init__.py  batch_instances.py  common.py  run_batch.py  run_filter.py  run_replay.py  run_single.py  run_traj_to_demo.py
1-dolphin/sweagent/run/hooks/: open_pr.py
1-dolphin/sweagent/sop/: issue_resolver.py  registry.py  summarizer.py
1-dolphin/sweagent/tools/: bundle.py  commands.py  parsing.py  query.py  tool_desc.py  tool_server.py  tools.py  utils.py
1-dolphin/sweagent/utils/: config.py  log.py  markdown.py  project.py  telemetry.py
1-dolphin/swereview/: app.py
1-dolphin/swereview/analysis/: analysis_problem.py  analysis_result.py
1-dolphin/swereview/model/: __init__.py  problem.py  prompt.py  result.py  traj.py
1-dolphin/swerex/: pyproject.toml
1-dolphin/swerex/src/swerex/: server.py
1-dolphin/swerex/src/swerex/deployment/: config.py  docker.py  remote.py  workspace.py
1-dolphin/swerex/src/swerex/deployment/hooks/: status.py
1-dolphin/swerex/src/swerex/runtime/: abstract.py  local.py
1-dolphin/templates/: index.html  problem.html  problem_content.html  trajectory.html  trajectory_content.html
1-dolphin/tools/defaults/lib/: flake8_utils.py  windowed_file.py
1-dolphin/tools/exit/: config.yaml
1-dolphin/tools/install_only/: install.sh
1-dolphin/tools/registry/: install.sh
1-dolphin/tools/registry/lib/: registry.py
1-dolphin/tools/update_function/: config.yaml
1-dolphin/tools/update_global/: config.yaml
2-experiment-data/benchmark/: benchmark.csv
2-experiment-data/rq1/: rq1-effectiveness-and-robustness.csv
2-experiment-data/rq2/: rq2-overhead-analysis.csv
2-experiment-data/rq3/: rq2-stage2-ablation.csv  rq3-stage1-ablation.csv
2-experiment-data/rq4/android/: android-complete-metadata.csv
2-experiment-data/rq4/android/example/: android-libcrypto-asm-off-preds.json  android-libcrypto-asm-off-result.json
2-experiment-data/rq4/firmware/: firmware-complete-metadta.csv
2-experiment-data/rq4/firmware/example/: firmware-heartbleed-false-positive-prioritized-path.json  firmware-heartbleed-false-positive-result.json
